--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -1,3 +1,5 @@
+@import (less) '../css/jquery-ui.optimized.css';
+
 // ==========================================================
 // Components
 // ==========================================================
@@ -252,7 +254,7 @@
 .ui-dialog {
     padding: 0;
     .ui-widget-header.ui-dialog-titlebar {
-        .atk-shape-rounded--top;
+        .atk-shape-rounded-top;
         padding: @margin/2 @margin;
         .ui-dialog-title {
             &:extend([class*="atk-text"][class*="-size--l"]);
