--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -36,11 +36,11 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 h1 { .text-size--7xl; }
-h2 { .text-size--3xl; }
-h3 { .text-size--xl; }
-h4 { .text-size--l; }
+h2 { .text-size--5xl; }
+h3 { .text-size--3xl; }
+h4 { .text-size--xl; }
 h5 { .text-size--default; }
-h6, small { .text-size--xs; }
+h6, small { .text-size--s; }
 
 
 // ==========================================================
@@ -112,7 +112,7 @@ h6, small { .text-size--xs; }
     &[class*="-size--6xl"] {
       .text-size--6xl;
     }
-    h1, &[class*="-size--5xl"] {
+    &[class*="-size--5xl"] {
       .text-size--5xl;
     }
     &[class*="-size--4xl"] {
