--- a/playground/docs.jade
+++ b/playground/docs.jade
@@ -10,9 +10,9 @@ html
     include includes/browsehappy
     .atk-layout
       //- include includes/header
-      .atk-layout-row.atk-layout-expand
-        .atk-layout.atk-layout-cell
-          aside.atk-layout-column#sidebar
+      .atk-layoutRow.atk-layout-expand
+        .atk-layout.atk-layoutCell
+          aside.atk-layoutColumn#sidebar
             nav.atk-swatch-ink.scrollable
               a(href='splash.html').atk-text-bold.atk-text-lead.atk-padding.atk-inline AgileToolkit CSS
               hr.atk-hr-reset.atk-push-xsmall
@@ -45,7 +45,7 @@ html
                   a(href="index.html").atk-swatch-ink.atk-padding.atk-section-xsmall Playground
                 li
                   a(href="examples.html").atk-swatch-ink.atk-padding.atk-section-xsmall Examples
-          .atk-layout-column.atk-layout-expand
+          .atk-layoutColumn.atk-layout-expand
             .atk-wrapper.atk-section-large
               section#getting-started
                 | Getting Started
