--- a/playground/index.jade
+++ b/playground/index.jade
@@ -8,12 +8,12 @@ html
   include includes/head
   body
     include includes/browsehappy
-    .layout
+    .atk-layout
       include includes/header
-      .layout-row.layout-expand
-        .layout.layout-cell#layout-content
-          .layout-column.layout-expand
-            .wrapper.padding-top--l.padding-bottom--l
+      .atk-layoutRow.atk-layoutExpand
+        .atk-layout.atk-layoutCell#layout-content
+          .atk-layoutColumn.atk-layoutExpand
+            .atk-wrapper.atk-padding-top--l.atk-padding-bottom--l
               include includes/playground-gridsystem
               include includes/playground-typography
               include includes/playground-helpers
